# tabula

./: CLAUDE.md  Discussion_30Aug2025.MD  README.md  readme.md  test-local-network.sh
app/: settings.gradle.kts
app/composeApp/: build.gradle.kts
app/composeApp/src/androidMain/kotlin/com/tabula/tabula/: MainActivity.kt  Platform.android.kt
app/composeApp/src/androidMain/res/values/: strings.xml
app/composeApp/src/commonMain/kotlin/com/tabula/tabula/: App.kt  Greeting.kt  Platform.kt
app/composeApp/src/commonTest/kotlin/com/tabula/tabula/: ComposeAppCommonTest.kt
app/composeApp/src/iosMain/kotlin/com/tabula/tabula/: MainViewController.kt  Platform.ios.kt
app/composeApp/src/jvmMain/kotlin/com/tabula/tabula/: Platform.jvm.kt  main.kt
app/iosApp/Configuration/: Config.xcconfig
app/iosApp/iosApp.xcodeproj/: project.pbxproj
core/: .gitignore  Cargo.toml  ICONS.md  MOBILE_SETUP.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
core/src/: App.css  App.tsx  blockchain.rs  lib.rs  main.rs  main.tsx  types.ts
core/src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
core/src-tauri/src/: lib.rs  main.rs
core/src/features/blockchain/: BlockCard.css  BlockCard.tsx  BlockExplorer.css  BlockExplorer.tsx  BlockchainStats.css  BlockchainStats.tsx  index.ts  useBlockchain.ts
core/src/features/knowledge-base/: EntityBrowser.css  EntityBrowser.tsx  index.ts  useEntities.ts
core/src/features/layout/: AppLayout.tsx  DesktopLayout.css  DesktopLayout.tsx  PhoneLayout.css  PhoneLayout.tsx  TabletLayout.css  TabletLayout.tsx  index.ts  useWindowSize.ts
core/src/features/mining/: HashRateGauge.css  HashRateGauge.tsx  MiningDashboard.css  MiningDashboard.tsx  MiningProgress.css  MiningProgress.tsx  index.ts  useMining.ts
core/src/features/network/: NetworkDashboard.css  NetworkDashboard.tsx  NetworkGraph.css  NetworkGraph.tsx  PeerList.css  PeerList.tsx  index.ts  useNetwork.ts
core/src/services/: blockchain.ts  events.ts  index.ts  tabula-kb.ts
core/src/styles/: base.css  buttons.css  components.css  layout.css
core/ui/: app.js  index.html  styles.css
eksperimentering/: hashcash.py
eksperimentering/tabula-kb/: .dockerignore  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.dev  README.md  docker-compose.yml  mynotes.md
eksperimentering/tabula-kb/crates/chain/: Cargo.toml
eksperimentering/tabula-kb/crates/chain/src/: lib.rs
eksperimentering/tabula-kb/crates/consensus/: Cargo.toml
eksperimentering/tabula-kb/crates/consensus/src/: lib.rs
eksperimentering/tabula-kb/crates/contracts/: Cargo.toml
eksperimentering/tabula-kb/crates/contracts/src/: lib.rs
eksperimentering/tabula-kb/crates/crypto/: Cargo.toml
eksperimentering/tabula-kb/crates/crypto/src/: lib.rs
eksperimentering/tabula-kb/crates/entity/: Cargo.toml
eksperimentering/tabula-kb/crates/entity/src/: lib.rs
eksperimentering/tabula-kb/crates/eval/: Cargo.toml
eksperimentering/tabula-kb/crates/eval/src/: lib.rs
eksperimentering/tabula-kb/crates/ingest/: Cargo.toml
eksperimentering/tabula-kb/crates/ingest/src/: lib.rs
eksperimentering/tabula-kb/crates/mempool/: Cargo.toml
eksperimentering/tabula-kb/crates/mempool/src/: lib.rs
eksperimentering/tabula-kb/crates/network/: Cargo.toml
eksperimentering/tabula-kb/crates/network/src/: lib.rs
eksperimentering/tabula-kb/crates/node/: Cargo.toml
eksperimentering/tabula-kb/crates/node/src/: main.rs
eksperimentering/tabula-kb/crates/persistence/: Cargo.toml
eksperimentering/tabula-kb/crates/persistence/src/: lib.rs
eksperimentering/tabula-kb/crates/query/: Cargo.toml
eksperimentering/tabula-kb/crates/query/src/: lib.rs
eksperimentering/tabula-kb/crates/staking/: Cargo.toml
eksperimentering/tabula-kb/crates/staking/src/: lib.rs
eksperimentering/tabula-kb/crates/store/: Cargo.toml
eksperimentering/tabula-kb/crates/store/src/: lib.rs
eksperimentering/tabula-kb/crates/subreddit/: Cargo.toml
eksperimentering/tabula-kb/crates/subreddit/src/: lib.rs
eksperimentering/tabula-kb/crates/types/: Cargo.toml
eksperimentering/tabula-kb/crates/types/src/: lib.rs
eksperimentering/tabula-kb/crates/units/: Cargo.toml
eksperimentering/tabula-kb/crates/units/src/: lib.rs
eksperimentering/tabula-kb/crates/vm/: Cargo.toml
eksperimentering/tabula-kb/crates/vm/src/: lib.rs
eksperimentering/tabula-kb/scripts/: check-status.sh  run-local-network.sh  stop-local-network.sh
forskning/: notater.txt  package-lock.json  package.json  tsconfig.json
forskning/src/: demo.ts  nl.ts  ops.ts
log_burn/: logburn.md
src/: graph.ts  measure.ts  planner.ts  types.ts
