[package]
name = "tabula-blockchain"
version = "0.1.0"
edition = "2021"

[lib]
name = "tabula_blockchain"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
sha2 = "0.10"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri = { version = "2.1", features = [] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri = { version = "2.1", features = ["devtools"] }
