[package]
name = "tabula-app"
version = "0.1.0"
description = "A Tauri-based blockchain application"
authors = ["you"]
edition = "2021"

[lib]
name = "tabula_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
tauri = { version = "2.1", features = ["macos-private-api"] }
tauri-plugin-opener = "2.0"
tauri-plugin-liquid-glass = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tabula-blockchain = { path = ".." }
sha2 = "0.10"
chrono = "0.4"
tokio = { version = "1", features = ["rt", "sync"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri = { version = "2.1", features = ["devtools", "macos-private-api"] }

[profile.dev]
incremental = true

[profile.release]
codegen-units = 1
lto = true
opt-level = "s"
panic = "abort"
strip = true

