[package]
name = "chain"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "../types" }
crypto = { path = "../crypto" }
consensus = { path = "../consensus" }
store = { path = "../store" }
subreddit = { path = "../subreddit" }
staking = { path = "../staking" }
vm = { path = "../vm" }
thiserror = "1.0"
