[package]
name = "network"
version = "0.1.0"
edition = "2021"

[dependencies]
types = { path = "../types" }
crypto = { path = "../crypto" }

# libp2p with required features
libp2p = { version = "0.54", features = [
    "tokio",
    "gossipsub",
    "mdns",
    "noise",
    "yamux",
    "tcp",
    "macros",
] }

# Async runtime
tokio = { version = "1", features = ["full", "sync"] }
futures = "0.3"

# Serialization for network messages
serde = { version = "1.0", features = ["derive"] }
serde_cbor = "0.11"

# Error handling and logging
thiserror = "1.0"
tracing = "0.1"
