[package]
name = "node"
version = "0.1.0"
edition = "2021"

[dependencies]
# Existing crates
vm = { path = "../vm" }
contracts = { path = "../contracts" }
entity = { path = "../entity" }
units = { path = "../units" }
store = { path = "../store" }

# New blockchain crates
types = { path = "../types" }
crypto = { path = "../crypto" }
consensus = { path = "../consensus" }
mempool = { path = "../mempool" }
chain = { path = "../chain" }
persistence = { path = "../persistence" }
network = { path = "../network" }
subreddit = { path = "../subreddit" }
staking = { path = "../staking" }

# External dependencies
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# HTTP API
axum = "0.7"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tower-http = { version = "0.5", features = ["cors"] }
